# k2hdkc_dbaas_override_conf

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_helper.sh  ci.yml  ostypevars.sh
buildutils/: APKBUILD.templ.in  Makefile.am  alpine_build_copy.conf  control.in  debian_build.sh  k2hdkc-dbaas-override-conf.install  k2hdkc-dbaas-override-conf.post-install.in  k2hdkc-dbaas-override-conf.postinst.in  k2hdkc-dbaas-override-conf.spec.in  make_postinst_script.sh  make_release_version_file.sh  make_rpm_changelog.sh  make_variables.sh  rpm_build.sh  rules.in
src/: Makefile.am  override.conf
